log
Fri 10 May 2024 12:19:41 AM UTC: 
 tests:  1|8
total_score: 0/70
bd0c701
Fri 10 May 2024 01:43:22 AM UTC: 
 treemap.c | 23 +++++++++++++++--------
 1 file changed, 15 insertions(+), 8 deletions(-)
 tests:  4|7
total_score: 5/70
851bffa
Fri 10 May 2024 01:52:37 AM UTC: 
 treemap.c | 46 ++++++++++++++++++++++++++++++++++++++++++++--
 1 file changed, 44 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:69:59: error: expected statement before ‘)’ token
   69 |             if (tree->lower_than(key,aux->pair->key) == 1))
      |                                                           ^
treemap.c:82:13: error: ‘else’ without a previous ‘if’
   82 |             else
      |             ^~~~
treemap.c:84:17: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
   84 |                 if (aux->right == NULL);
      |                 ^~
treemap.c:85:17: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
   85 |                 {
      |                 ^
treemap.c:90:17: error: ‘else’ without a previous ‘if’
   90 |                 else
      |                 ^~~~
cc1: all warnings being treated as errors
Compilation failed
52461d5
